crates/fig-parser/tests/snapshots/integration_tests__integration__all_features.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - std
          - io
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - core
          - mem
  - Struct:
      visibility: Export
      annotations:
        - name: repr
          args:
            - Path:
                segments:
                  - C
      is_packed: false
      name:
        segments:
          - Config
      generic_params: []
      requires: []
      fields:
        - name: debug
          ty: Bool
          visibility: Default
          annotations: []
        - name: max_connections
          ty: U32
          visibility: Default
          annotations: []
        - name: port
          ty: U16
          visibility: Default
          annotations: []
        - name: host
          ty:
            Array:
              element_type: U8
              size: ~
          visibility: Default
          annotations: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Pool
      generic_params:
        - Type:
            name: T
            bounds:
              - Path:
                  path:
                    segments:
                      - Sized
                  generic_args: []
            default_type: ~
      requires: []
      fields:
        - name: items
          ty:
            Pointer:
              nullable: false
              mutable: true
              element_type:
                Path:
                  path:
                    segments:
                      - T
                  generic_args: []
          visibility: Default
          annotations: []
        - name: count
          ty: USize
          visibility: Default
          annotations: []
        - name: capacity
          ty: USize
          visibility: Default
          annotations: []
  - Enum:
      visibility: Default
      annotations: []
      name:
        segments:
          - Status
      representation: U8
      generic_params: []
      requires: []
      variants:
        - name: IDLE
          value:
            IntegerLiteral:
              base: Decimal
              digits: "0"
              suffix: ~
        - name: RUNNING
          value:
            IntegerLiteral:
              base: Decimal
              digits: "1"
              suffix: ~
        - name: STOPPED
          value:
            IntegerLiteral:
              base: Decimal
              digits: "2"
              suffix: ~
        - name: ERROR
          value:
            IntegerLiteral:
              base: Decimal
              digits: "255"
              suffix: ~
  - Union:
      visibility: Default
      annotations: []
      name:
        segments:
          - MaybeError
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      variants:
        - name: value
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
        - name: error
          ty:
            Array:
              element_type: U8
              size: ~
  - Interface:
      visibility: Default
      annotations: []
      name:
        segments:
          - Lifecycle
      generic_params: []
      extends: []
      methods:
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: true
          receiver: ~
          name: start
          outer_generic_params: []
          func_generic_params: []
          self_param:
            is_pointer: true
            is_mutable: true
          params: []
          return_types:
            - Path:
                path:
                  segments:
                    - ok
                generic_args: []
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: true
          receiver: ~
          name: stop
          outer_generic_params: []
          func_generic_params: []
          self_param:
            is_pointer: true
            is_mutable: true
          params: []
          return_types:
            - Path:
                path:
                  segments:
                    - ok
                generic_args: []
        - visibility: Default
          annotations: []
          is_extern: false
          is_effect: false
          receiver: ~
          name: is_running
          outer_generic_params: []
          func_generic_params: []
          self_param:
            is_pointer: true
            is_mutable: false
          params: []
          return_types:
            - Bool
  - Function:
      signature:
        visibility: Public
        annotations: []
        is_extern: false
        is_effect: true
        receiver: ~
        name: run
        outer_generic_params:
          - Type:
              name: T
              bounds:
                - Path:
                    path:
                      segments:
                        - Lifecycle
                    generic_args: []
              default_type: ~
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: pool
            ty:
              Pointer:
                nullable: false
                mutable: true
                element_type:
                  Path:
                    path:
                      segments:
                        - Pool
                    generic_args:
                      - Path:
                          path:
                            segments:
                              - T
                          generic_args: []
          - name: config
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Config
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - MaybeError
              generic_args:
                - Path:
                    path:
                      segments:
                        - ok
                    generic_args: []
      body:
        statements:
          - If:
              condition:
                FieldAccess:
                  object:
                    Path:
                      segments:
                        - config
                  field: debug
                  is_propagating: false
              then_body:
                statements:
                  - Pass
              elif_clauses: []
              else_body: ~
          - For:
              pattern: i
              iterable:
                Call:
                  callee:
                    Path:
                      segments:
                        - range
                  args:
                    - name: ~
                      value:
                        IntegerLiteral:
                          base: Decimal
                          digits: "0"
                          suffix: ~
                    - name: ~
                      value:
                        Cast:
                          expr:
                            FieldAccess:
                              object:
                                Path:
                                  segments:
                                    - config
                              field: max_connections
                              is_propagating: false
                          target_type: USize
                  generic_args: ~
                  is_propagating: false
              body:
                statements:
                  - Pass
          - Pass
