crates/fig-parser/tests/snapshots/integration_tests__integration__error_handling.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Union:
      visibility: Default
      annotations: []
      name:
        segments:
          - IoError
      generic_params: []
      requires: []
      variants:
        - name: not_found
          ty:
            Path:
              path:
                segments:
                  - ok
              generic_args: []
        - name: permission_denied
          ty:
            Path:
              path:
                segments:
                  - ok
              generic_args: []
        - name: io_failure
          ty: I32
  - Union:
      visibility: Default
      annotations: []
      name:
        segments:
          - Result
      generic_params:
        - Type:
            name: T
            bounds: []
            default_type: ~
      requires: []
      variants:
        - name: ok
          ty:
            Path:
              path:
                segments:
                  - T
              generic_args: []
        - name: err
          ty:
            Path:
              path:
                segments:
                  - IoError
              generic_args: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: true
        receiver: ~
        name: open_file
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: path
            ty:
              Array:
                element_type: U8
                size: ~
        return_types:
          - Path:
              path:
                segments:
                  - Result
              generic_args:
                - Array:
                    element_type: U8
                    size: ~
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: true
        receiver: ~
        name: read_file
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: path
            ty:
              Array:
                element_type: U8
                size: ~
        return_types:
          - Path:
              path:
                segments:
                  - Result
              generic_args:
                - Array:
                    element_type: U8
                    size: ~
      body:
        statements:
          - Let:
              annotations: []
              name: result
              ty: ~
              value:
                Call:
                  callee:
                    Path:
                      segments:
                        - open_file
                  args:
                    - name: ~
                      value:
                        Path:
                          segments:
                            - path
                  generic_args: ~
                  is_propagating: false
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: true
        receiver: ~
        name: write_file
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: path
            ty:
              Array:
                element_type: U8
                size: ~
          - name: data
            ty:
              Array:
                element_type: U8
                size: ~
        return_types:
          - Path:
              path:
                segments:
                  - Result
              generic_args:
                - Path:
                    path:
                      segments:
                        - ok
                    generic_args: []
      body:
        statements:
          - Pass
