crates/fig-parser/tests/snapshots/integration_tests__integration__interpreter_ast.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Union:
      visibility: Default
      annotations: []
      name:
        segments:
          - Expr
      generic_params: []
      requires: []
      variants:
        - name: int_lit
          ty: I64
        - name: float_lit
          ty: F64
        - name: bool_lit
          ty: Bool
        - name: add
          ty:
            Pointer:
              nullable: false
              mutable: false
              element_type:
                Path:
                  path:
                    segments:
                      - BinOp
                  generic_args: []
        - name: mul
          ty:
            Pointer:
              nullable: false
              mutable: false
              element_type:
                Path:
                  path:
                    segments:
                      - BinOp
                  generic_args: []
        - name: neg
          ty:
            Pointer:
              nullable: false
              mutable: false
              element_type:
                Path:
                  path:
                    segments:
                      - Expr
                  generic_args: []
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - BinOp
      generic_params: []
      requires: []
      fields:
        - name: left
          ty:
            Pointer:
              nullable: false
              mutable: false
              element_type:
                Path:
                  path:
                    segments:
                      - Expr
                  generic_args: []
          visibility: Default
          annotations: []
        - name: right
          ty:
            Pointer:
              nullable: false
              mutable: false
              element_type:
                Path:
                  path:
                    segments:
                      - Expr
                  generic_args: []
          visibility: Default
          annotations: []
  - Union:
      visibility: Default
      annotations: []
      name:
        segments:
          - Value
      generic_params: []
      requires: []
      variants:
        - name: int_val
          ty: I64
        - name: float_val
          ty: F64
        - name: bool_val
          ty: Bool
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: eval
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: expr
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - Expr
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - Value
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: eval_binop
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: op
            ty:
              Pointer:
                nullable: false
                mutable: false
                element_type:
                  Path:
                    path:
                      segments:
                        - BinOp
                    generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - Value
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: left
              ty: ~
              value:
                Call:
                  callee:
                    Path:
                      segments:
                        - eval
                  args:
                    - name: ~
                      value:
                        FieldAccess:
                          object:
                            Path:
                              segments:
                                - op
                          field: left
                          is_propagating: false
                  generic_args: ~
                  is_propagating: false
          - Let:
              annotations: []
              name: right
              ty: ~
              value:
                Call:
                  callee:
                    Path:
                      segments:
                        - eval
                  args:
                    - name: ~
                      value:
                        FieldAccess:
                          object:
                            Path:
                              segments:
                                - op
                          field: right
                          is_propagating: false
                  generic_args: ~
                  is_propagating: false
          - Pass
